--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <!-- Le styles -->
-        <link href="${url_for('static', filename='css/bootstrap.css')}" rel="stylesheet">
-        <link href="${url_for('static', filename='css/apprepo.css')}" rel="stylesheet">
+        <link href="/static/css/bootstrap.css" rel="stylesheet">
+        <link href="/static/css/apprepo.css" rel="stylesheet">
         <style>
             body {
                 padding-top: 60px;
@@ -18,7 +18,7 @@
                 font-size: 150%;
             }
         </style>
-        <link href="${url_for('static', filename='css/bootstrap-responsive.css')}" rel="stylesheet">
+        <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
@@ -27,13 +27,10 @@
         <![endif]-->
         <!-- Le fav and touch icons -->
         <link rel="shortcut icon" href="favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="${url_for('static', filename='ico/apple-touch-icon-144-precomposed.png')}">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="${url_for('static', filename='ico/apple-touch-icon-114-precomposed.png')}">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="${url_for('static', filename='ico/apple-touch-icon-72-precomposed.png')}">
-        <link rel="apple-touch-icon-precomposed" href="${url_for('static', filename='ico/apple-touch-icon-57-precomposed.png')}">
-        <style>
-            undefined
-        </style>
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
     </head>
     <body>
         <div class="navbar navbar-fixed-top navbar-inverse">
@@ -51,6 +48,9 @@
                             <li class="nav-header">
                                 Available packages
                             </li>
+                            {% for package in packages %}
+                                <li><a href="#{{ package.name }}">{{ package.name }}</a></li>
+                            {% endfor %}
                     </div>
                 </div>
                 <div class="span9" id="hero">
@@ -93,18 +93,17 @@
                     <br>
                     <div style="height: 1080px">
                     </div>
-                    <h1>
-                        Available packages
-                    </h1>
-                        <hr>
-                        </div>
-                    </div>
+                    <h1>Available packages</h1>
+                    {% for package in packages %}
+                        {% include "home_package.html" %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
-        <script src="${url_for('static', filename='jquery-1.8.1.min.js')}"></script>
-        <script src="${url_for('static', filename='jquery.dataTables.min.js')}"></script>
-        <script src="${url_for('static', filename='js/bootstrap.js')}"></script>
+        <script src="/static/jquery-1.8.1.min.js"></script>
+        <script src="/static/js/underscore-min.js"></script>
+        <script src="/static/jquery.dataTables.min.js"></script>
+        <script src="/static/js/bootstrap.js"></script>
         <script>
             var options = new Object();
             options.bPaginate = true;
@@ -120,9 +119,20 @@
                 $.fn.dataTableExt.oStdClasses.sPageNextDisabled = "btn btn-info disabled";
                 $(".download-links").dataTable(options);
             });
-        </script>
-        <script>
+
+            function render() {
+                var template = _.template()
+                $.get('/packages/main-stable/index/packages.json', function(data) {
+                    _.each(data, function(package) {
+                        var a = $('<a/>').text(package.name).attr('href', '#' + package.name);
+                        $('ul.nav').append($('<li/>').append(a));
+                        $('#packages').append($('<h2/>').text())
+                    });
+                });
+            }
+
             $(function() {
+                //render();
                 $(".show-other").click(function() {
                     var table = $(".table_wrapper", $(this).parent());
                     if (table.is(':visible')) {
