--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -20,7 +20,7 @@
             <code>{{ instructions.command }}</code>
         {% endif %}
         {% if instructions.download_link %}
-            Download and run the <a href="{{ instructions.download_link }}">installer</a>.
+            <a href="{{ instructions.download_link }}" class="btn btn-mini">Download</a> the installer and run it.
         {% endif %}
     </div>
 </div>
