--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -26,11 +26,7 @@
             </script>
         <![endif]-->
         <!-- Le fav and touch icons -->
-        <link rel="shortcut icon" href="favicon.ico">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="shortcut icon" href="/static/favicon.ico">
     </head>
     <body>
         <div class="navbar navbar-fixed-top navbar-inverse">
@@ -49,7 +45,7 @@
                                 Available packages
                             </li>
                             {% for package in packages %}
-                                <li><a href="#{{ package.name }}">{{ package.name }}</a></li>
+                                <li><a href="#{{ package.name }}">{{ package.name|replace("-", " ")|title }}</a></li>
                             {% endfor %}
                     </div>
                 </div>
