--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -57,7 +57,7 @@
                                 <span class="label label-warning">ubuntu</span>
                             </div>
                             <div class="span9">
-                                Execute in shell: <code>curl ${setup_url} | sudo sh -</code>
+                                Execute in shell: <code>curl {{ setup_url }} | sudo sh -</code>
                             </div>
                         </div>
                         <hr style="margin:0px; margin-bottom: 10px;">
