HOSTDEV-1828 support for suse across everything

--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -55,9 +55,10 @@
                                 <span class="label label-important">oracle</span>
                                 <span class="label label-important">centos</span>
                                 <span class="label label-warning">ubuntu</span>
+                                <span class="label label-success">suse</span>
                             </div>
                             <div class="span9">
-                                Execute in shell: <code>curl {{ setup_url }} | sudo sh -</code>
+                                Execute in shell: <code>curl -s {{ setup_url }} | sudo sh -</code>
                             </div>
                         </div>
                         <hr style="margin:0px; margin-bottom: 10px;">
