--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -8,6 +8,9 @@
         {% if platform == 'ubuntu' %}
             <span class="label label-warning">ubuntu</span>
         {% endif %}
+        {% if platform == 'suse' %}
+            <span class="label label-success">suse</span>
+        {% endif %}
         {% if platform == 'vmware' %}
             <span class="label label-info">vmware</span>
         {% endif %}
