--- a/src/infi/app_repo/webserver/templates/setup.html
+++ b/src/infi/app_repo/webserver/templates/setup.html
@@ -6,7 +6,7 @@ _apt() {
     codename=`lsb_release -c | awk '{print tolower($2)}'`
     echo "deb {{host_url}}packages/{{index_name}}/apt/linux-$distribution $codename main" > /etc/apt/sources.list.d/{{host}}.{{index_name}}.list
     echo Installing GPG key...
-    curl {{host_url}}packages/gpg.key | apt-key add -
+    curl -s {{host_url}}packages/gpg.key | apt-key add -
     echo Fetching package metadata...
     apt-get update > /dev/null 2>&1
 }
@@ -25,6 +25,30 @@ gpgkey={{host_url}}packages/gpg.key" > /etc/yum.repos.d/{{host}}.{{index_name}}.
     yum makecache > /dev/null 2>&1
 }
 
+_zypper() {
+    name={{host}}.{{index_name}}
+    version=`cat /etc/SuSE-release | grep -Eo "[0-9]+" | head -n 1`
+    arch=`uname -m`
+    url={{host_url}}packages/{{index_name}}/yum/linux-suse-$version-$arch/
+
+    echo Installing GPG key...
+    curl -s {{host_url}}packages/gpg.key > /tmp/$name.gpg.key
+    rpm --import /tmp/$name.gpg.key  > /dev/null 2>&1
+
+    echo Setting up...
+    zypper sd $name > /dev/null 2>&1
+    zypper sa -t YUM $url $name > /dev/null 2>&1
+
+    echo Fetching package metadata...
+    zypper refresh {{host}}.{{index_name}} > /dev/null 2>&1
+}
+
+# suse
+if [ -f /etc/SuSE-release ]
+then
+    _zypper
+    exit 0
+fi
 
 # debian-based
 if [ -f /etc/debian_version ]
