--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -38,7 +38,7 @@
                                 Available packages
                             </li>
                             {% for package in packages %}
-                                <li><a href="#{{ package.product_name }}">{{ package.product_name|title }}</a></li>
+                                <li><a href="#{{ package.name }}">{{ package.product_name|title }}</a></li>
                             {% endfor %}
                     </div>
                 </div>
