TRIVIAL cosmetic changes in the installation instructions

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -1,8 +1,10 @@
 <div class="row-fluid">
-    <div class="span2">
+    <div class="span3">
         {% if platform == 'redhat' %}
             <span class="label label-important">redhat</span>
             <span class="label label-important">oracle</span>
+        {% endif %}
+        {% if platform == 'centos' %}
             <span class="label label-important">centos</span>
         {% endif %}
         {% if platform == 'ubuntu' %}
@@ -12,13 +14,13 @@
             <span class="label label-success">suse</span>
         {% endif %}
         {% if platform == 'vmware' %}
-            <span class="label label-info">vmware</span>
+            <span class="label label-primary">vmware</span>
         {% endif %}
         {% if 'windows' in platform %}
-            <span class="label label-success">{{ platform }}</span>
+            <span class="label label-info">{{ platform }}</span>
         {% endif %}
     </div>
-    <div class="span10">
+    <div class="span9">
         {% if instructions.command %}
             <code>{{ instructions.command }}</code>
         {% endif %}
