--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -185,6 +185,7 @@
             }
             resize_sidebar();
             $(window).on('resize', resize_sidebar);
+            $.ajaxSetup({cache: false});
 
         </script>
     </body>
