APR-10 Installation and upgrade instructions are wrong for vmware

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -23,7 +23,9 @@
     <div class="span9">
         {% if platform == 'vmware' %}
             {% if instructions.notes %}
-                {{ instructions.notes }}
+                {% for note in instructions.notes %}
+                    {{ note }}<br>
+                {% endfor %}
             {% else %}
                 <a href="{{ instructions.download_link }}" class="btn btn-mini">Download</a> the OVF and deploy it via VMware vSphere.
             {% endif %}
