--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -65,6 +65,7 @@
                         <hr style="margin:0px; margin-bottom: 10px;">
                         <div class="row-fluid">
                             <div class="span3">
+                                <span class="label label-info">solaris</span>
                                 <span class="label label-info">vmware</span>
                                 <span class="label label-success">windows</span>
                                 <span class="label label-inverse">other</span>
