APR-14 solaris is gray

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -11,7 +11,7 @@
             <span class="label label-warning">ubuntu</span>
         {% endif %}
         {% if platform == 'solaris' %}
-            <span class="label label-primary">solaris</span>
+            <span class="label label-info">solaris</span>
         {% endif %}
         {% if platform == 'suse' %}
             <span class="label label-success">suse</span>
