--- a/src/infi/app_repo/webserver/templates/home_package.html
+++ b/src/infi/app_repo/webserver/templates/home_package.html
@@ -22,7 +22,7 @@
 </div>
 <br>
 {% if package.release_notes_url %}
-<a href="{{ package.release_notes_url }}" target="_blank">Change log</a>
+<a href="{{ package.release_notes_url }}" target="_blank">Change log and user's guide</a>
 <br>
 {% endif %}
 <a href="#" onclick="show_versions('{{ package.product_name }}', '{{ package.releases_uri }}'); return false;">
