APR-17 aix rpms

--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -11,7 +11,10 @@
             <span class="label label-warning">ubuntu</span>
         {% endif %}
         {% if platform == 'solaris' %}
-            <span class="label label-info">solaris</span>
+            <span class="label label-default">solaris</span>
+        {% endif %}
+        {% if platform == 'aix' %}
+            <span class="label label-default">aix</span>
         {% endif %}
         {% if platform == 'suse' %}
             <span class="label label-success">suse</span>
