AIX instructions to install curl" g

--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -65,14 +65,21 @@
                         <hr style="margin:0px; margin-bottom: 10px;">
                         <div class="row-fluid">
                             <div class="span3">
-                                <span class="label label-default">aix</span>
                                 <span class="label label-default">solaris</span>
                                 <span class="label label-info">vmware</span>
                                 <span class="label label-success">windows</span>
-                                <span class="label label-inverse">other</span>
                             </div>
                             <div class="span9">
                                 Skip to step 2
+                            </div>
+                        </div>
+                        <hr style="margin:0px; margin-bottom: 10px;">
+                        <div class="row-fluid">
+                            <div class="span3">
+                                <span class="label label-default">aix</span>
+                            </div>
+                            <div class="span9">
+                                <a href="http://www.perzl.org/aix/index.php?n=main.curl">Download and install curl</a>
                             </div>
                         </div>
                         <br>
