APR-17 link to curl in new tab

--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -79,7 +79,7 @@
                                 <span class="label label-default">aix</span>
                             </div>
                             <div class="span9">
-                                <a href="http://www.perzl.org/aix/index.php?n=main.curl">Download and install curl</a>
+                                <a href="http://www.perzl.org/aix/index.php?n=main.curl" target="_blank">Download and install curl</a>
                             </div>
                         </div>
                         <br>
