APR-25 Make selecting with the mouse for copying in the web UI easier

--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -59,7 +59,7 @@
                                 <span class="label label-success">suse</span>
                             </div>
                             <div class="span9">
-                                Execute in shell: <code>curl -s {{ setup_url }} | sudo sh -</code>
+                                Execute in shell: <input class="cmd" value="curl -s {{ setup_url }} | sudo sh -">
                             </div>
                         </div>
                         <hr style="margin:0px; margin-bottom: 10px;">
@@ -177,6 +177,18 @@
             $(window).on('resize', resize_sidebar);
             $.ajaxSetup({cache: false});
 
+            // Make it easy to copy commands
+            $(function() {
+                $('.cmd')
+                    .attr('readonly', 'readonly')
+                    .on('click', function() {
+                        this.focus();
+                        this.select();
+                    })
+                    .each(function() {
+                        $(this).css('width', $(this).val().length * 8);
+                    });
+            });
         </script>
     </body>
 </html>
