--- a/src/infi/app_repo/webserver/static/css/apprepo.css
+++ b/src/infi/app_repo/webserver/static/css/apprepo.css
@@ -41,3 +41,15 @@ span.ver {
 #versions_modal {
     width: 700px;
 }
+
+.cmd {
+  padding: 0 4px;
+  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+  font-size: 12px;
+  color: #333333;
+  border-radius: 3px;
+  color: #d14;
+  background-color: #f7f7f9 !important;
+  border: 1px solid #e1e1e8;
+  cursor: default !important;
+}
