--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -40,7 +40,7 @@
             {% endif %}
         {% else %}
             {% if instructions.command %}
-                <code>{{ instructions.command.replace("//", host_url) }}</code>
+                <input class="cmd" value="{{ instructions.command.replace("//", host_url) }}">
             {% endif %}
             {% if instructions.download_link %}
                 <a href="{{ instructions.download_link }}" class="btn btn-mini">Download</a> the installer and run it.
