--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -41,9 +41,10 @@
         {% else %}
             {% if instructions.command %}
                 <input class="cmd" value="{{ instructions.command.replace("//", host_url) }}">
-            {% endif %}
-            {% if instructions.download_link %}
+            {% elif instructions.download_link %}
                 <a href="{{ instructions.download_link }}" class="btn btn-mini">Download</a> the installer and run it.
+            {% else %}
+                {{ instructions }}
             {% endif %}
         {% endif %}
     </div>
