APR-35 refactoring to bootstrap3

--- a/src/infi/app_repo/webserver/templates/home_package.html
+++ b/src/infi/app_repo/webserver/templates/home_package.html
@@ -1,7 +1,7 @@
 <hr id="{{ package.name }}">
 <br>
-<div class="row-fluid">
-    <div class="span9">
+<div class="row">
+    <div class="col-xs-9">
         <h2>
             {{ package.product_name }}
             <span class="label ver">{{ package.latest_version }}</span>
