--- a/src/infi/app_repo/webserver/templates/home.html
+++ b/src/infi/app_repo/webserver/templates/home.html
@@ -9,6 +9,7 @@
         <link href="/static/css/bootstrap.css" rel="stylesheet">
         <link href="/static/css/apprepo.css" rel="stylesheet">
         <link href="/static/css/jquery.dataTables.min.css" rel="stylesheet">
+        <link href="/static/css/simple-sidebar.css" rel="stylesheet">
         <style>
             body {
                 padding-top: 20px;
@@ -17,96 +18,95 @@
                 font-size: 150%;
             }
         </style>
-        <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
 
             </script>
         <![endif]-->
-        <link rel="shortcut icon" href="/static/favicon.ico">
+        <link rel="shortcut icon" href="/static/img/favicon.ico">
     </head>
     <body>
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span3">
-                    <div class="well sidebar-nav affix" style="overflow-y: scroll;">
-                        <ul class="nav nav-list">
-                            <li class="">
-                                <a href="#hero">Setting up the repository</a>
-                            </li>
-                            <li class="nav-header">
-                                Available packages
-                            </li>
-                            {% for package in packages %}
-                                {% if not package.hidden %}
-                                <li><a href="#{{ package.name }}">{{ package.product_name }}</a></li>
-                                {% endif %}
-                            {% endfor %}
-                    </div>
-                </div>
-                <div class="span9" id="hero">
-                    <div class="hero-unit">
-                        <h1>Setup Instructions</h1>
-                        <br>
-                        <h2>
-                            Step 1 (first time only)
-                        </h2>
-                        <div class="row-fluid">
-                            <div class="span3">
-                                <span class="label label-important">redhat</span>
-                                <span class="label label-important">oracle</span>
-                                <span class="label label-important">centos</span>
-                                <span class="label label-warning">ubuntu</span>
-                                <span class="label label-success">suse</span>
-                            </div>
-                            <div class="span9">
-                                Execute in shell: <input class="cmd" value="curl -s {{ setup_url }} | sudo sh -">
-                            </div>
-                        </div>
-                        <hr style="margin:0px; margin-bottom: 10px;">
-                        <div class="row-fluid">
-                            <div class="span3">
-                                <span class="label label-default">solaris</span>
-                                <span class="label label-info">vmware</span>
-                                <span class="label label-success">windows</span>
-                            </div>
-                            <div class="span9">
-                                Skip to step 2
-                            </div>
-                        </div>
-                        <hr style="margin:0px; margin-bottom: 10px;">
-                        <div class="row-fluid">
-                            <div class="span3">
-                                <span class="label label-default">aix</span>
-                            </div>
-                            <div class="span9">
-                                <a href="http://www.perzl.org/aix/index.php?n=main.curl" target="_blank">Download and install curl</a>
-                            </div>
-                        </div>
-                        <br>
-                        <h2>
-                            Step 2
-                        </h2>
-                        <p>
-                            Choose a package from the list on the left
-                        </p>
-                    </div>
-                    <br>
-                    <div style="height: 1080px">
-                    </div>
-                    <h1>Available packages</h1>
+        <div id="wrapper">
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="">
+                        <a href="#hero">Setting up the repository</a>
+                    </li>
+                    <li class="nav-header">
+                        Available packages
+                    </li>
                     {% for package in packages %}
                         {% if not package.hidden %}
-                            {% include "home_package.html" %}
+                        <li><a href="#{{ package.name }}">{{ package.product_name }}</a></li>
                         {% endif %}
                     {% endfor %}
+                </ul>
+            </div>
+            <div id="page-content-wrapper">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="jumbotron" id="hero">
+                            <h1>Setup Instructions</h1>
+                            <br>
+                            <h2>
+                                Step 1 (first time only)
+                            </h2>
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <span class="label label-danger">redhat</span>
+                                    <span class="label label-danger">oracle</span>
+                                    <span class="label label-danger">centos</span>
+                                    <span class="label label-warning">ubuntu</span>
+                                    <span class="label label-success">suse</span>
+                                </div>
+                                <div class="col-xs-9">
+                                    Execute in shell: <input class="cmd" value="curl -s {{ setup_url }} | sudo sh -">
+                                </div>
+                            </div>
+                            <hr style="margin:0px; margin-bottom: 10px;">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <span class="label label-default">solaris</span>
+                                    <span class="label label-info">vmware</span>
+                                    <span class="label label-success">windows</span>
+                                </div>
+                                <div class="col-xs-9">
+                                    Skip to step 2
+                                </div>
+                            </div>
+                            <hr style="margin:0px; margin-bottom: 10px;">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <span class="label label-default">aix</span>
+                                </div>
+                                <div class="col-xs-9">
+                                    <a href="http://www.perzl.org/aix/index.php?n=main.curl" target="_blank">Download and install curl</a>
+                                </div>
+                            </div>
+                            <br>
+                            <h2>
+                                Step 2
+                            </h2>
+                            <p>
+                                Choose a package from the list on the left
+                            </p>
+                        </div>
+                        <br>
+                        <div style="height: 1080px">
+                        </div>
+                        <h1>Available packages</h1>
+                        {% for package in packages %}
+                            {% if not package.hidden %}
+                                {% include "home_package.html" %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
-
         <div class="modal" id="versions_modal" tabindex="-1" role="dialog" style="display: none;">
-          <div class="modal-dialog">
+          <div class="modal-dialog" id="versions_modal_dialog">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
@@ -131,13 +131,12 @@
             </div>
           </div>
         </div>
-
         <br><br>
 
-        <script src="/static/jquery-1.8.1.min.js"></script>
+        <script src="/static/js/jquery-1.11.3.min.js"></script>
         <script src="/static/js/underscore-min.js"></script>
-        <script src="/static/jquery.dataTables.min.js"></script>
-        <script src="/static/js/bootstrap.js"></script>
+        <script src="/static/js/jquery.dataTables.min.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
         <script>
 
             var PAGE_LENGTH = 7;
