--- a/src/infi/app_repo/webserver/templates/home_package_instructions.html
+++ b/src/infi/app_repo/webserver/templates/home_package_instructions.html
@@ -1,11 +1,11 @@
-<div class="row-fluid">
-    <div class="span3">
+<div class="row">
+    <div class="col-xs-3">
         {% if platform == 'redhat' %}
-            <span class="label label-important">redhat</span>
-            <span class="label label-important">oracle</span>
+            <span class="label label-danger">redhat</span>
+            <span class="label label-danger">oracle</span>
         {% endif %}
         {% if platform == 'centos' %}
-            <span class="label label-important">centos</span>
+            <span class="label label-danger">centos</span>
         {% endif %}
         {% if platform == 'ubuntu' %}
             <span class="label label-warning">ubuntu</span>
@@ -29,7 +29,7 @@
             <span class="label label-default">python</span>
         {% endif %}
     </div>
-    <div class="span9">
+    <div class="col-xs-9">
         {% if platform == 'vmware' %}
             {% if instructions.notes %}
                 {% for note in instructions.notes %}
