making the version text look a little nicer

--- a/src/infi/app_repo/webserver/static/css/apprepo.css
+++ b/src/infi/app_repo/webserver/static/css/apprepo.css
@@ -35,7 +35,9 @@ h3 {
 
 span.ver {
     position: relative;
-    top: -6px;
+    left: 30px;
+    font-size: 0.7em;
+    color: gray;
 }
 
 #versions_modal_dialog {
